tests/ui/rfcs/rfc-2632-const-trait-impl/feature-gate.gated.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/feature-gate.rs:14:1
   |
LL | fn main() {}
   | ^^^^^^^^^

error: aborting due to previous error

